--- a/config/real/config.yaml
+++ b/config/real/config.yaml
@@ -4,7 +4,10 @@ trajectory_planner:
     map_topic: "/map"
     scan_topic: "/scan"
     initial_pose_topic: "/initialpose"
+    buffer_meters: 1.0
 trajectory_follower:
   ros__parameters:
     odom_topic: "/pf/pose/odom"
     drive_topic: "/vesc/high_level/input/nav_0"
+    lookahead_distance: 1.0
+    speed: 1.0
