--- a/config/real/pf_config.yaml
+++ b/config/real/pf_config.yaml
@@ -6,13 +6,12 @@ particle_filter:
     # each particle. This doesn't need to be
     # equal to the actual number (>1000)
     # so long as you downsample properly
-    num_beams_per_particle: 99
+    num_beams_per_particle: 100
 
     # The field of view centered around theta=0
     scan_field_of_view: 4.71 # radians
-    
-    # angle stride for downsampling the lidar data
-    angle_step: 11
+    noise: 0.08
+
 
     # Discretize the theta space for faster ray tracing
     scan_theta_discretization: 500.0
@@ -29,3 +28,5 @@ particle_filter:
     deterministic: false
 
     lidar_scale_to_map_scale: 1.0
+
+    optimize_publishes: true
